# diskless-manager

./: .gitignore  README.md  backend.py  config.json  package-lock.json  package.json
.github/workflows/: main.yml
backend/: backend.py  config.json
src/: App-v1.jsx  App.jsx  Select.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  config.rs  dhcp.rs  iscsi.rs  lib.rs  mod.rs  service.rs  utils.rs  zfs.rs
src/components/: ClientManagement.jsx  ImageManagement.jsx  RAMUsage.jsx  ServiceManagement.jsx  SetupPage.jsx
src/components/ClientManagement/: ClientFormModal.jsx  ClientTable.jsx  index.jsx
src/components/ImageManagement/: index.jsx
src/components/ServiceManagement/: ServiceConfigModal.jsx  ZfsPoolCard.jsx  index.jsx
src/components/ui/: Button.jsx  Card.jsx  ContextMenu.jsx  Error.jsx  Input.jsx  Loading.jsx  Modal.jsx  Notification.jsx  Select.jsx  ServiceCard.jsx  Sidebar.jsx  Table.jsx  ZfsPoolCard.jsx  index.js
src/components/ui/modals/: ClientFormModal.jsx  ServiceConfigModal.jsx
src/contexts/: NotificationContext.jsx
src/hooks/: useClientManager.js  useDataFetcher.js  useDataFetching.js  useMasterManager.js  useServiceManager.js
src/layouts/: MainLayout.jsx
src/router/: router.jsx
src/store/: useAppStore.js
src/utils/: apiRequest.js  config.js  contextMenuAction.js  helpers.js
